# hcmut-scraping

./: Cargo.toml
.github/workflows/: release.yml
src/: diff.rs  main.rs  news.rs
